# scenario-lab

./: .gitignore  AGENTS.md  CLAUDE.md  CODEBASE_REVIEW.md  POC_README.md  PR_DESCRIPTION.md  README.md  ROADMAP.md  ROADMAP_V2.md  TECHNICAL_DEBT.md  V2_README.md  pyproject.toml  requirements-dev.txt  requirements.txt  run_scenario_v2.py  run_tests.py  test_v2_actor.py  test_v2_batch_analyzer.py  test_v2_batch_cost_manager.py  test_v2_batch_parallel_executor.py  test_v2_batch_progress_tracker.py  test_v2_batch_runner.py  test_v2_caching.py  test_v2_error_handler.py  test_v2_integration.py  test_v2_loader.py  test_v2_memory_optimizer.py  test_v2_metrics.py  test_v2_parameter_variator.py  test_v2_phase_2_3.py  test_v2_phase_2_4.py  test_v2_pipeline_mock.py  test_v2_progressive_fallback.py  test_v2_qa_validation.py
docs/: API.md  ARCHITECTURE_GROUND_TRUTH.md  ARCHITECTURE_GROUND_TRUTH_SV.md  DATABASE_ANALYTICS_GUIDE.md  LOCAL_LLMS.md  METRICS_MIGRATION.md  PHASE_2_COMPLETION.md  PHASE_5_WEB_INTEGRATION.md  PHASE_6_1_V1_REMOVAL_PLAN.md  PHASE_6_2_TEST_STATUS.md  PHASE_6_4_BUGS.md  PHASE_6_SUMMARY.md  TEST_RESULTS_POST_V2_MIGRATION.md  V2_ARCHITECTURE.md  V2_FRONTEND_COMPLETE.md  V2_FRONTEND_INTEGRATION.md  V2_MIGRATION.md  V2_MIGRATION_GUIDE.md  V2_REWRITE_COMPLETION_PLAN.md  batch-config-wizard-guide.md  batch-execution-guide.md  calibration-guide.md  error-handling-guide.md  exogenous-events-guide.md  performance-optimization.md  performance-optimizations.md  scenario-creation-guide.md  v2_migration_plan.md
examples/: api_client.py
experiments/: example-batch-config.yaml
experiments/test-batch/: batch-config.yaml
notes/: .gitkeep
scenario_lab/: __init__.py  cli.py
scenario_lab/api/: __init__.py  app.py  auth.py  rate_limit.py  settings.py
scenario_lab/batch/: __init__.py  batch_analyzer.py  batch_cost_manager.py  batch_parallel_executor.py  batch_progress_tracker.py  batch_runner.py  parameter_variator.py
scenario_lab/core/: __init__.py  actor.py  communication_manager.py  context_manager.py  events.py  metrics_tracker.py  metrics_tracker_v2.py  orchestrator.py  prompt_builder.py  qa_validator.py  qa_validator_v2.py  (+1 more)
src/: __init__.py  actor_engine.py  api_utils.py  batch_analyzer.py  batch_cost_manager.py  batch_parallel_executor.py  batch_progress_tracker.py  batch_runner.py  cache_cli.py  communication_manager.py  context_manager.py  cost_tracker.py  create_batch_config.py  create_scenario.py  error_handler.py  exogenous_events.py  graceful_fallback.py  logging_config.py  markdown_utils.py  memory_optimizer.py  metrics_tracker.py  parameter_variator.py  progressive_fallback.py  qa_validator.py  response_cache.py  response_parser.py  run_scenario.py  scenario_state_manager.py  schemas.py  world_state.py  world_state_updater.py
tests/: INTEGRATION_TESTS.md  README.md  __init__.py  test_actor.py  test_api.py  test_api_auth.py  test_api_client.py  test_api_error_handling.py  test_api_utils.py  test_async_executor.py  test_batch_analyzer.py  test_batch_integration.py  test_batch_progress_tracker.py  test_batch_runner.py  test_cli.py  test_cli_wizards.py  test_communication_manager.py  test_context_manager.py  test_context_manager_v2.py  test_cost_tracker.py  test_database_analytics.py  test_error_handler.py  test_exogenous_events.py  test_golden_files.py  test_graceful_fallback.py  test_integration.py  test_json_response_parser.py  test_loaders.py  test_markdown_utils.py  test_metrics_tracker.py  test_metrics_tracker_legacy.py  test_metrics_tracker_v2.py  test_migrate_metrics.py  test_model_pricing.py  test_progressive_fallback.py  test_prompt_builder.py  test_qa_validator.py  test_response_cache.py  test_response_parser.py  test_scenario_wizard.py  (+6 more)
web/: README.md  app.py  requirements.txt  scenario_executor.py
(+168 files in other folders)
